--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                 id="animated-marker"
                 type="pattern"
                 preset="custom"
-                url="/static/master_marker.patt"
+                url="master_marker.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
                 id="markerA"
             >
               <a-image
-                    src="/static/ar_asdlk.png"
+                    src="ar_asdlk.png"
                     clickhandler
                     scale="1 1 1"
                     rotation="-90 0 0"
