--- a/index.html
+++ b/index.html
@@ -1,23 +1,12 @@
 <!doctype html>
 <html>
     <head>
-        <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
     </head>
-    <script>
-        AFRAME.registerComponent("clicker", {
-        init: function() {
-            this.el.addEventListener("click", e => {
-                alert("Box clicked!");
-            });
-        }
-        });
-        
-    </script>
+
     <body style="margin: 0; overflow: hidden;">
         <a-scene
             vr-mode-ui="enabled: false;"
@@ -37,19 +26,16 @@
                 cursor="fuse: false; rayOrigin: mouse;"
                 id="markerA"
             >
-              <a-image
+                <a-image
                     src="ar_asdlk.png"
-                    clickhandler
-                    scale="2 2 2"
+                    scale="1 1 1"
+                    class="clickable"
                     rotation="-90 0 0"
                     gesture-handler
-                    clicker
                 ></a-image>
             </a-marker>
 
             <a-entity camera></a-entity>
         </a-scene>
-        
-
     </body>
 </html>
