--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                 id="animated-marker"
                 type="pattern"
                 preset="custom"
-                url="master_marker.patt"
+                url="assets/marker.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
                 id="markerA"
             >
                 <a-image
-                    src="ar_asdlk.png"
+                    src="assets/asset.png"
                     scale="1 1 1"
                     class="clickable"
                     rotation="-90 0 0"
