--- a/pages/page_test2.html
+++ b/pages/page_test2.html
@@ -31,7 +31,7 @@
                 id="animated-marker"
                 type="pattern"
                 preset="custom"
-                url="/static/master_marker.patt"
+                url="/static/marker.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
