--- a/pages/page_test2.html
+++ b/pages/page_test2.html
@@ -31,14 +31,14 @@
                 id="animated-marker"
                 type="pattern"
                 preset="custom"
-                url="/static/marker.patt"
+                url="/prueba/static/marker.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
                 id="markerA"
             >
               <a-image
-                    src="/static/ar_test2.png"
+                    src="/prueba/static/ar_test2.png"
                     clickhandler
                     scale="1 1 1"
                     rotation="-90 0 0"
