--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <a-scene mindar-image="imageTargetSrc: https://jlcodex.github.io/prueba/targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card" src="https://jlcodex.github.io/prueba/target.png" />
+        <img id="card" src="https://jlcodex.github.io/prueba/objective.png" />
         <a-asset-item id="avatarModel" src="https://jlcodex.github.io/prueba/objective.png"></a-asset-item>
       </a-assets>
 
